# gfxreconstruct

./: .gitmodules  CMakeLists.txt  USAGE_android.md  USAGE_desktop.md  USAGE_desktop_Vulkan.md  summary.cfg  vulkan_dump_resources.md
android/framework/cmake-config/: PlatformConfig.cmake
android/framework/decode/: CMakeLists.txt
android/framework/encode/: CMakeLists.txt
android/framework/util/: CMakeLists.txt
android/layer/: build.gradle
android/scripts/: gfxrecon.py
framework/application/: application.cpp  application.h
framework/decode/: CMakeLists.txt  api_decoder.h  driver_info_decoder_base.h  dx12_decoder_base.cpp  dx12_decoder_base.h  dx12_replay_consumer_base.cpp  dx12_replay_consumer_base.h  dx_replay_options.h  exe_info_decoder_base.h  file_processor.cpp  file_processor.h  generated_vulkan_consumer_post_commands.h  generated_vulkan_consumer_pre_commands.h  metadata_json_consumer.h  preload_file_processor.cpp  replay_options.h  screenshot_handler.cpp  screenshot_handler.h  stat_decoder_base.h  vulkan_captured_swapchain.cpp  vulkan_captured_swapchain.h  vulkan_commands_info_common.h  vulkan_consumer_base.h  vulkan_decoder_base.cpp  vulkan_decoder_base.h  vulkan_default_allocator.cpp  vulkan_default_allocator.h  vulkan_frame_inspector_client_indirect_commands.h  vulkan_frame_inspector_client_object_info.h  vulkan_frame_inspector_client_vulkan_commands_info.h  vulkan_frame_inspector_consumer_base.cpp  vulkan_frame_inspector_consumer_base.h  vulkan_frame_inspector_consumer_client_base.cpp  vulkan_frame_inspector_consumer_client_base.h  vulkan_frame_inspector_consumer_client_object_table.cpp  vulkan_frame_inspector_consumer_client_object_table.h  vulkan_frame_inspector_consumer_replay.cpp  vulkan_frame_inspector_indirect_commands_info.h  vulkan_frame_inspector_object_info.h  vulkan_frame_inspector_serialized_commands.h  (+32 more)
framework/encode/: CMakeLists.txt  api_capture_manager.h  capture_manager.cpp  capture_manager.h  capture_settings.cpp  capture_settings.h  custom_vulkan_api_call_encoders.cpp  custom_vulkan_api_call_encoders.h  custom_vulkan_encoder_commands.h  d3d12_capture_manager.cpp  dx12_state_writer.cpp  dx12_state_writer.h  generated_vulkan_encoder_commands.h  generated_vulkan_encoder_post_commands.h  generated_vulkan_encoder_pre_commands.h  vulkan_capture_manager.cpp  vulkan_capture_manager.h  vulkan_handle_wrapper_util.h  vulkan_handle_wrappers.h  vulkan_state_tracker.cpp  vulkan_state_tracker.h  vulkan_state_tracker_initializers.h  vulkan_state_writer.cpp  vulkan_state_writer.h
framework/encode/perfetto/: custom_perfetto_encoder_commands.cpp  custom_perfetto_encoder_commands.h  perfetto_encoder_commands.cpp  perfetto_encoder_commands.h  perfetto_tracing_categories.cpp  perfetto_tracing_categories.h
framework/format/: format.h
framework/graphics/: dx12_util.cpp  dx12_util.h  vulkan_resources_util.cpp  vulkan_resources_util.h  vulkan_util.cpp  vulkan_util.h
framework/util/: CMakeLists.txt  buffer_writer.h  checksum_manager.cpp  checksum_manager.h  client.c  defines.h  file_output_stream.cpp  file_output_stream.h  file_streamer.cpp  file_streamer.h  image_writer.cpp  image_writer.h  logging.h  options.h  page_guard_manager.cpp  page_guard_manager.h  page_guard_manager_server.c  page_status_tracker.h  pagemap_manager.cpp  pagemap_manager.h  platform.h  socket.h  socket_linux.cpp  spirv_parsing_util.cpp  to_string.h
plugins/: CMakeLists.txt  entrypoints_post.h  entrypoints_pre.h  plugins_entry_point_tables.h  plugins_func_table.h  plugins_func_table_post.h  plugins_func_table_pre.h
plugins/includes/capture/: entrypoints_pre.h  plugins_entry_point_tables.h  plugins_entrypoints_post.h  plugins_entrypoints_pre.h  plugins_func_table_post.h  plugins_func_table_pre.h
plugins/includes/replay/: entrypoints_post.h  entrypoints_pre.h  plugins_entry_point_tables.h  plugins_entrypoints_post.h  plugins_entrypoints_pre.h  plugins_func_table_post.h  plugins_func_table_pre.h
plugins/perfetto/: CMakeLists.txt  perfetto_encoder_commands.cpp  perfetto_encoder_commands.h  perfetto_entrypoints_post.cpp  perfetto_entrypoints_pre.cpp  perfetto_tracing_categories.cpp  perfetto_tracing_categories.h
plugins/perfetto/capture/: CMakeLists.txt  perfetto_encoder_commands.cpp  perfetto_encoder_commands.h  perfetto_entrypoints_post.cpp  perfetto_entrypoints_pre.cpp
plugins/perfetto/replay/: CMakeLists.txt  perfetto_entrypoints_post.cpp  perfetto_entrypoints_pre.cpp  perfetto_replay_commands.cpp  perfetto_replay_commands.h
tools/: CMakeLists.txt  tool_settings.h
tools/frame_inspector/: CMakeLists.txt  main.cpp
tools/frame_inspector_client/: CMakeLists.txt  main.cpp
tools/info/: main.cpp
tools/replay/: android_main.cpp  desktop_main.cpp  parse_dump_resources_cli.cpp  parse_dump_resources_cli.h  replay_settings.h
