add_subdirectory(replay)
add_subdirectory(compress)
add_subdirectory(info)
add_subdirectory(extract)
add_subdirectory(optimize)
add_subdirectory(capture-vulkan)
add_subdirectory(gfxrecon)
add_subdirectory(convert)
add_subdirectory(frame_inspector)
add_subdirectory(frame_inspector_client)

if(MSVC)
    add_subdirectory(launcher)
endif()
